Don't call ScriptPromiseProperty::Reject() if it is not pending.

FetchEvent::OnNavigationPreloadError() could be called even after FetchEvent::OnNavigationPreloadResponse() was called.

Bug: 737046
Change-Id: Iffa616be92b6c4bf33a24cb79e8657b8edf0de30
Reviewed-on: https://chromium-review.googlesource.com/549560
Reviewed-by: Matt Falkenhagen <falken@chromium.org>
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#482585}
Former-commit-id: de0d72da49996b4e2c267e5a154a268e720e58ed